# elastic-svn

branches/panta/SWIG-elastiC/: ChangeLog  Makefile.am  configure.in  main.cxx
branches/panta/SWIG-elastiC/examples/database/: db.h
branches/panta/byacc-ec/: NEWS  autogen.sh  closure.c  lalr.c  output.c  warshall.c
branches/panta/elastiC/: .cvsignore  .symlinks  AUTHORS  Makefile.msc  README
branches/panta/elastiC/aclocal/: elasticdir.m4
branches/panta/elastiC/doc/: .cvsignore  Makefile.am  mingw.sh  tutorial.sdf
branches/panta/elastiC/misc/: elastic.el  kw  preparse.sl.diff
branches/panta/elastiC/regress/: sm.ec  staticmembers.ec  testarray.ec  testforin.ec  teststring.ec  testvarargs2.ec  (+1 more)
branches/panta/modules/ffi/: Makefile.am  NEWS  TODO  ffibug.ec
tags/START/SWIG-elastiC/: elastic.swg
tags/START/SWIG-elastiC/examples/simple/: .cvsignore  Makefile.am
tags/START/byacc-ec/: configure.in  symtab.c
tags/START/byacc-ec/sample-elastic/: .cvsignore  Makefile.am  cal_driver.ec
tags/START/byacc-ec/test/: .cvsignore
tags/START/elastiC/: Makefile.am  binary-files.txt  elastic.m4
tags/pre-generic-io/elastiC/: Makefile.am  Makefile.in.original  NEWS  README.CVS  TODO  aclocal-flags  mkwin32.bat
tags/pre-generic-io/elastiC/src/dl/: Makefile.am
tags/pre-generic-io/elastiC/src/modules-dynamic/re/: Makefile.am
tags/pre-generic-io/elastiC/src/win32/: Makefile.am  os.c
tags/release-0-0-37/elastiC/: .cvsignore  ChangeLog  README  configure.in  subautogen.sh
tags/release-0-2/byacc-ec/: Makefile.am  error.c  lr0.c  mkpar.c  skeleton.c
tags/release-0-2/byacc-ec/sample-elastic/: cal.output  cal.y
tags/release-0-2/misc/embed/: configure.in
tags/release-0-4/SWIG-elastiC/: elastic.cxx  elastic.h
trunk/CVSROOT/: loginfo
trunk/SWIG-elastiC/: NEWS  README  header.swg
trunk/SWIG-elastiC/examples/: Makefile.am
trunk/byacc-ec/: AUTHORS  ChangeLog  README  defs.h  main.c  reader.c  verbose.c
trunk/elastiC/: .cvsignore  ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.CVS  README.SVN  TODO  acinclude.m4  autogen.sh  config.h.in  configure.in  configure.in.prev  cygwin-makedll  makemodule  mingw32-makedll  subautogen.sh
trunk/elastiC/aclocal/: Makefile.am  elastic-clean.am  elastic-comp  elastic.m4
trunk/elastiC/doc/: Makefile.am  TUTORIAL.struct  ec.sdf  ecc.sdf  elastic.sdf
trunk/elastiC/doc/devel/: IO.txt  MISC  frame.txt  modules.tex
trunk/elastiC/doc/examples/: errno_ex.ec  os_ex.ec  popen.ec  posix_1.ec  states.ec  xml_outline.ec
trunk/elastiC/doc/images/: ecico32x22.pnm  ecico32x22.xcf  ecico32x22.xpm
trunk/elastiC/examples/: README  balance-lazy.ec  balance.ec  wc-lazy.ec  wc-oldstyle.ec  wc.ec
trunk/elastiC/misc/: README.emacs  site.sl.diff
trunk/elastiC/modules/: .cvsignore  Makefile.am  Re.ec  file.ec  os.ec
trunk/elastiC/regress/: .cvsignore  .depend  Makefile.am  Makefile.original  SelfBug.ec  TestMod.ec  add.ec  arity.ec  bug.ec  class1.ec  closurebug3.ec  ecpp.pl  exc3.ec  exc4.ec  filestreamtest.ec  hashtry2.ec  regress.sh  t1.ec  t4.ec  testbreak.ec  testinit2.ec  testnamedstringop.ec  testnamedstringop2.ec  testnewsyn.ec  tests  testsend.ec  xml_outline.ec
trunk/elastiC/regress/expecterr/: test_param.err
trunk/elastiC/regress/expectout/: arity.out  fibonacci.out  filestreamtest.out  shash.out  testgoto.out  testnamedprintf.out  testnamedstringop.out  testnewsyn.out  util.out  xml_outline.out
trunk/elastiC/regress/files/: test.xml
trunk/elastiC/regress/stdout/: .cvsignore
trunk/elastiC/src/: .cvsignore  ChangeLog  EXCEPTIONS  Makefile.am  TODO.UNDERWAY  TODO.now  alloca.c  arithmetic.h  ast.c  ast.h  basic.h  bitstring.h  builtin.c  bytecode.c  cnf.h.in  compat.h  compile.c  compile.h  compile2c.c  compile2c.h  compile2c_base.h  compile2c_exec.h  compile2c_head.h  compile2c_macros.h  compile2c_tail.h  conf.h  debug.c  debug.h  dstring.c  dstring.h  ec.c  ec2c.c  ecc.c  ecdump.c  ecrt.c  elastic-config.in  elastic.c  elastic.h  elastic_p.y  elastic_s.l  (+32 more)
trunk/elastiC/src/arithmetic/: Makefile.am  arithmetic.c
trunk/elastiC/src/compat/: getopt.c  getsetenv.c  strtol.c  strtoul.c
trunk/elastiC/src/dl/: Makefile.am
trunk/elastiC/src/hashtable_old/: hashtable.h
trunk/elastiC/src/libltdl/: .cvsignore  Makefile.in  aclocal-flags  aclocal.m4  configure  libtool
trunk/elastiC/src/modules/: .cvsignore  Makefile.am  array_m.h  errno2modulebody.pl  errno_m.c  filestream_m.c  posix_m.c  stream_m.c  string_m.h
trunk/elastiC/src/modules-dynamic/: .cvsignore
trunk/elastiC/src/modules-dynamic/re/: .cvsignore  re_m.c  re_m.h
trunk/elastiC/src/modules-dynamic/re/pcre/: .cvsignore  Makefile.am  Makefile.in  configure.in  pcre-config
trunk/elastiC/src/modules/xml/: .cvsignore  Makefile.am  xml_m.c  xml_m.h
trunk/elastiC/src/modules/xml/expat/: .cvsignore
trunk/elastiC/src/modules/xml/expat/conftools/: .cvsignore
trunk/elastiC/src/modules/xml/expat/examples/: .cvsignore
trunk/elastiC/src/modules/xml/expat/lib/: .cvsignore
trunk/elastiC/src/modules/xml/expat/tests/: .cvsignore
trunk/elastiC/src/modules/xml/expat/xmlwf/: .cvsignore
trunk/elastiC/src/types/: .cvsignore  Makefile.am  array.c  char.c  class.c  compiled.c  file.c  object.c  package.c  stack.c  stream_t.c  string.c
trunk/elastiC/src/unix/: os.c
trunk/elastiC/src/win32/: os.c
trunk/elastiC/tools/: dmake  symlinks  template.h.tmpl
trunk/elastiC/win32/: .cvsignore  PROBLEMS  cnf.h
trunk/elastiC/win32/vc6/: ecc.dep  ecc.dsp  ecdump.dep  ecdump.mak  elastiC.dsp  elastiC.dsw  elastiC.mak  re.dep
trunk/elastiC/win32/vc7/: ReadMe.txt  ec.vcproj
trunk/misc/embed/: .cvsignore  embed.c
trunk/modules/ffi/: ChangeLog  README.CVS  ffi.c
trunk/modules/glue/: IDLModel.ec  Makefile  api-specification-proposal.tex  main.ec  sample.scm  scmparse.ec
trunk/modules/gtk/: .cvsignore  Makefile.am
trunk/modules/inet/: Makefile.am  configure.in  geturl.ec  inet.c  stockticker.ec
trunk/modules/skeleton/: README.CVS  autogen.sh
trunk/modules/unicode/: ChangeLog  Makefile.am  configure.in  testunicode.ec  unicode.c
(+418 files in other folders)
